# sample_grpc

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
proto/: service.proto
src/client/: main.cc
src/server/: main.cc
src/server/service/: common_service_impl.cc  common_service_impl.h
